# games-prototyping

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: main.cpp
src/launcher/: Launcher.cpp  Launcher.h
src/prototypes/aabb/: AABB.cpp  AABB.h  Player.cpp  Player.h  Room.cpp  Room.h  Wall.cpp  Wall.h
src/prototypes/base/: Base.cpp  Base.h
src/shared/: Window.cpp  Window.h
